# WireGuard_WebManager

./: .gitignore  LICENSE  PROGRESS.md  README.md  config.example.yaml  config.yaml  requirements.txt  wg_worker.py
.github/workflows/: release.yml
app/: main.py
app/core/: conf_templates.py  db.py  exceptions.py  logging_config.py  path_utils.py  wg_commands.py  wg_worker_client.py
app/repositories/: peers.py
app/routers/: settings_api.py
archive/python/: README.md
archive/python/app/core/: config.py  ip_allocator.py
archive/python/app/routers/: auth.py  docs_router.py  peers.py  server.py
archive/python/deploy/: wg-manager-worker.service
deploy/: wg-manager-web.service  wg-manager-web@.service  wg-manager-worker.service  wg-manager.env.example  wireguard-webmanager-worker.service  wireguard-webmanager.service
docs/: 01-setup.md  02-config.md  03-operation.md  04-rust-migration.md  README.md  WORKER.md
rust/: Cargo.toml  README.md
rust/wg-common/: Cargo.toml
rust/wg-common/src/: config.rs  lib.rs  worker_protocol.rs
rust/wg-manager/: Cargo.toml
rust/wg-manager/debian/: postinst  prerm
rust/wg-manager/src/: db.rs  main.rs  templates.rs  wg_client.rs  wg_local.rs
rust/wg-worker/: Cargo.toml
rust/wg-worker/src/: main.rs
templates/: base.html  dashboard.html  docs_list.html  docs_view.html  login.html  peers.html  settings.html
