[package]
name = "wg-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WireGuard Web Manager - Web UI"

[[bin]]
name = "wg-manager"
path = "src/main.rs"

[dependencies]
wg-common = { path = "../wg-common" }
# Runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = { version = "0.7", features = ["json", "form", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
# Jinja2互換テンプレート
minijinja = { version = "2", features = ["builtins"] }
# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# IP/CIDR
ipnet = "2"
# Temp file (sudo preshared-key)
tempfile = "3"
# HTTP (wg version latest)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Database (bundled = no system libsqlite3 required)
rusqlite = { version = "0.31", features = ["bundled"] }
# QR code
qrcode = "0.14"
image = "0.25"
# Markdown
pulldown-cmark = "0.9"
# Cookie / session (simple)
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
# Base64 for keys
base64 = "0.21"
# UUID for peer id
uuid = { version = "1", features = ["v4"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
