[package]
name = "wg-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WireGuard Web Manager - Web UI"
license = "MIT"
homepage = "https://github.com/tm-io/WireGuard_WebManager"

[[bin]]
name = "wg-manager"
path = "src/main.rs"

[dependencies]
wg-common = { path = "../wg-common" }
# Runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = { version = "0.7", features = ["json", "form", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
# Jinja2互換テンプレート
minijinja = { version = "2", features = ["builtins"] }
# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# IP/CIDR
ipnet = "2"
# Temp file (sudo preshared-key)
tempfile = "3"
# HTTP (wg version latest)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Database (bundled = no system libsqlite3 required)
rusqlite = { version = "0.31", features = ["bundled"] }
# QR code
qrcode = "0.14"
image = "0.25"
# Markdown
pulldown-cmark = "0.9"
# Cookie / session (simple)
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
# Base64 for keys
base64 = "0.21"
# UUID for peer id
uuid = { version = "1", features = ["v4"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── cargo-deb 設定 (Ubuntu / Debian 向け .deb ビルド) ────────────────────────
# 使い方: cargo install cargo-deb
#         cargo build --release --workspace
#         cargo deb -p wg-manager --no-build
[package.metadata.deb]
name = "wireguard-webmanager"
maintainer = "tm-io <noreply@example.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
WireGuard Web Manager はブラウザから WireGuard VPN ピアを管理できる
Rust 製 Web UI デーモンです。wg-manager (Web UI) と wg-worker (特権操作)
の 2 プロセス構成で動作します。"""
depends = "$auto, wireguard-tools"
section = "net"
priority = "optional"
# postinst / prerm は debian/ ディレクトリから自動参照される
maintainer-scripts = "debian/"
# systemd ユニットを自動で enable する (cargo-deb の systemd 統合)
systemd-units = { enable = true, start = false }
# インストールされるファイル: [source, dest, mode]
assets = [
    ["../../target/release/wg-manager",  "usr/bin/wg-manager",  "755"],
    ["../../target/release/wg-worker",   "usr/bin/wg-worker",   "755"],
    ["../../deploy/wireguard-webmanager.service",        "lib/systemd/system/wireguard-webmanager.service",        "644"],
    ["../../deploy/wireguard-webmanager-worker.service", "lib/systemd/system/wireguard-webmanager-worker.service", "644"],
]

# ── cargo-generate-rpm 設定 (RHEL / Rocky / AlmaLinux 向け .rpm ビルド) ──────
# 使い方: cargo install cargo-generate-rpm
#         cargo build --release --workspace
#         cargo generate-rpm -p wg-manager
[package.metadata.generate-rpm]
name = "wireguard-webmanager"
license = "MIT"
summary = "WireGuard Web Manager - Web UI for managing WireGuard VPN"
group = "Applications/Internet"
requires = [
    { name = "wireguard-tools" },
]
assets = [
    { source = "../../target/release/wg-manager",  dest = "/usr/bin/wg-manager",  mode = "0755" },
    { source = "../../target/release/wg-worker",   dest = "/usr/bin/wg-worker",   mode = "0755" },
    { source = "../../deploy/wireguard-webmanager.service",        dest = "/usr/lib/systemd/system/wireguard-webmanager.service",        mode = "0644" },
    { source = "../../deploy/wireguard-webmanager-worker.service", dest = "/usr/lib/systemd/system/wireguard-webmanager-worker.service", mode = "0644" },
]

[package.metadata.generate-rpm.post_install_script]
# ユーザー作成・ディレクトリ作成・systemd 登録
script = """
id -u wgwm > /dev/null 2>&1 || useradd -r -s /sbin/nologin -d /nonexistent wgwm
install -d -m 750 -o root -g wgwm /etc/wireguard-webmanager
install -d -m 750 -o wgwm -g wgwm /var/lib/wireguard-webmanager
systemctl daemon-reload
systemctl enable wireguard-webmanager-worker.service
systemctl enable wireguard-webmanager.service
echo "インストール完了。次のコマンドで起動: systemctl start wireguard-webmanager-worker wireguard-webmanager"
"""

[package.metadata.generate-rpm.pre_uninstall_script]
script = """
systemctl stop wireguard-webmanager.service wireguard-webmanager-worker.service 2>/dev/null || true
systemctl disable wireguard-webmanager.service wireguard-webmanager-worker.service 2>/dev/null || true
"""
